# constelite

./: .gitignore  LICENSE  README.md  gitlab-ci.yml  mkdocs.yml  pyproject.toml
.github/workflows/: chore.yml  pull.yml  release.yml
constelite/: __init__.py  api.py  api_base.py  api_models.py  config.py  getter.py  hook.py  model.py  protocol.py  setter.py  store.py  test.py  utils.py
constelite/api/: __init__.py  api.py
constelite/api/camunda/: api.py  defs.py  template_generator.py
constelite/api/redis/: api.py
constelite/api/starlite/: __init__.py  api.py  async_client.py  client.py  middlewares.py  requests.py
constelite/graphql/: schema.py
constelite/guid_map/: __init__.py  guid.py  memory.py  neo4j_map.py
constelite/loggers/: __init__.py  base_logger.py  notion_logger.py
constelite/models/: __init__.py  auto_resolve.py  dynamic.py  inspector.py  model.py  object.py  ref.py  relationships.py  resolve.py  store.py  tensor.py
constelite/store/: __init__.py  base.py  base_async.py  base_store.py  memcached.py  memory.py  neoflux.py  notion.py  notion_async.py  pickle.py  pickle_store.py  queries.py  uid_key_base.py
docs/: index.md
docs/for_developers/: camunda_api.md  error_logging.md  graphql.md  index.md  new_api.md  new_store.md
docs/getting_started/: index.md
docs/getting_started/key_concepts/: api.md  hook.md  index.md  protocol.md  ref.md  (+3 more)
tests/: expected_graphql_schema.txt  test_async_map.py  test_graphql.py  test_guid.py  test_inspector.py  test_model_resoultion.py  test_protocol_discovery.py  test_protocols.py  test_store.py
(+14 files in other folders)
