[tool.poetry]
name = "constelite"
version = "0.1.0"
description = ""
authors = ["Mihails Delmans <mihails.delmans@colorifix.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.6"
pandera = "^0.22.1"
loguru = "^0.7.3"
graphene = "^3.4.3"
aiodataloader = "^0.4.0"
graphql-query = "^1.4.0"
pymemcache = "^4.0.0"
py2neo = "^2021.2.4"
influxdb-client = "^1.48.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
